# UAP_MachineLearning

./: README.md
PrakMod6/: app1.py  pyproject.toml  requirements.txt
